--- a/app/src/main/res/drawable/bg_btn4.xml
+++ b/app/src/main/res/drawable/bg_btn4.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#AA6600"/>
+            <solid android:color="#303e63"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
 
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="#FF9900"/>
+            <solid android:color="#303e9f"/>
             <corners android:radius="5dp"/>
         </shape>
 
